k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clixx-app
  namespace: clixx
  labels:
    app: clixx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clixx-app
  template:
    metadata:
      labels:
        app: clixx-app
    spec:
      containers:
        - name: clixx-app
          # DOCKER_IMAGE is replaced by Jenkins at runtime with the real ecr value
          image: DOCKER_IMAGE
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
